Use string resources for error messages in UiBuilderOperator (#177)
* Use string resources for error messages in UiBuilderOperator

* Fix the error message for invalid indices in onSwapModifiers

* Update UiBuilderOperatorTest to use coroutines

* Add compose-desktop to the test dependency of :feature:uibuilder

* Add compose.desktop.uiTestJUnit4 too

* Enable showing detailed stack traces

* Avoid HeadlessException by mocking AWT Toolkit